--- a/views/tmpl/admin/door/view-doors.html
+++ b/views/tmpl/admin/door/view-doors.html
@@ -8,7 +8,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="bg-dashboard">
-						<div class="bg-transparent">
+						<div class="bg-transparent doorbg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -22,36 +22,44 @@
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<a ui-sref="app.admin.facility.facility">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-map-marker fa-5x"></i>
+					<a ui-sref="app.admin.device.devices">
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Facility</p>
-									<span class="text-lg">2</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Devices</p>
-									<span class="text-lg">35</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">35</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
@@ -59,17 +67,21 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Users</p>
-									<span class="text-lg">145</span>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -82,8 +94,8 @@
 						<div class="thumb thumb-xxll">
 							<img class="img-circle" src="images/noimage.jpg" alt="">
 						</div>
-						<h4 class="mb-0"><strong>Main Gate Front</strong></h4>
-						<span class="text-muted">Active</span>
+						<h4 class="mb-0"><strong>{{doorData.door_name}}</strong></h4>
+						<span class="text-muted">{{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</span>
 						<div class="mt-40">
 							<button class="btn btn-rounded-20 btn-sm btn-lightred">Delete Gate</button>
 						</div>
@@ -92,11 +104,11 @@
 						<ul class="list-inline tbox m-0">
 							<li class="tcol p-10">
 								<h3 class="m-0 mb-5">Facility</h3>
-								<span class="text-transparent-white mt-15"><a ui-sref="app.admin.facility.facility-details">USA Corporate Services</a></span>
+								<span class="text-transparent-white mt-15"><a ui-sref="app.admin.facility.facility-details">{{doorData.facility_name}}</a></span>
 							</li>
 							<li class="tcol bg-blue dker p-10">
 								<h3 class="m-0 mb-5">Device</h3>
-								<span class="text-transparent-white"><a ui-sref="app.admin.device.device-details">Elika-Doorbell</a></span>
+								<span class="text-transparent-white"><a ui-sref="app.admin.device.device-details">{{doorData.device_name}}</a></span>
 							</li>
 						</ul>
 					</div>					
@@ -107,7 +119,7 @@
 						<h1 class="custom-font"><strong>Description</strong></h1>
 					</div> 
 					<div class="tile-body">
-						<p class="text-default lt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p> 
+						<p class="text-default lt">{{doorData.door_description}}</p> 
 					</div> 
 				</section> 
 			</div>
@@ -118,8 +130,7 @@
 						<uib-tabset class="tabs-dark"> 
 							<uib-tab heading="Profile Detail">
 								<div class="wrap-reset"> 
-									<div class="profile-settings"> 
-									
+									<div class="profile-settings">
 										<div class="row">
 											<div class="form-group col-md-12 legend">
 												<h4><strong>Account Details</strong></h4>
@@ -128,53 +139,64 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Name</label> Main Gate Front</p>
-												<p><label>Device</label> Elika-Doorbell</p>
-												<p><label>Facility</label> USA Corporate Services</p>
-												<p><label>Status</label> Active</p>
+												<p><label>Name</label> {{doorData.door_name}}</p>
+												<p><label>Facility</label> {{doorData.facility_name}}</p>
+												<p><label>Device</label> {{doorData.device_name}}</p>
+												<p><label>Door Groups</label> Entry Gate</p>
+												<p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p>
 											</div>											
 										</div>
 										
 									</div>
 								</div>
 							</uib-tab>
-							<uib-tab heading="Edit Profile">
+							<uib-tab heading="Edit Door">
 								<div class="wrap-reset"> 
 									<div class="profile-settings"> 
-									
-										<div class="row">
-											<div class="form-group col-md-12 legend">
-												<h4><strong>Account Details</strong></h4>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-sm-6">
-												<label for="first-name">Name</label>
-												<input type="text" class="form-control" id="first-name" value="">
-											</div>											
-											<div class="col-sm-6">
-												<label for="">Status</label><br/>
-												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+										<form name="door_data" ng-submit="editDoordata(doorData, door_data)" ng-validate="validationOptions">
+											<div class="row">
+												<div class="form-group col-md-12 legend">
+													<h4><strong>Account Details</strong></h4>
 												</div>
 											</div>
-										</div>
-										
-										<div class="row">	
-											<div class="form-group col-sm-12">
-												<label for="bio">Description</label>
-												<textarea class="form-control" id="bio" style="height: 125px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</textarea>
+											
+											<div class="row">
+												<div class="col-md-6 first">
+													<div class="form-group">
+														<label for="">Name</label>
+														<input type="text" name="door_name" id="" class="form-control mb-10" placeholder="" ng-model="doorData.door_name" required>
+													</div>
+												</div>
+												<div class="col-md-6 last">
+													<div class="form-group">
+														<label for="">Facility</label><br/>
+														<select class="form-control" ng-options="field.facility_name as field.facility_name for field in facilityList" ng-model="doorData.facility_name" >
+														</select>
+													</div>
+												</div>
 											</div>
-										</div>
-										<div class="row">
-											<div class="form-group col-md-12 legend mt-20">
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
+											<div class="form-group">
+												<label for="">Description</label>
+												<textarea name="" id="" class="form-control mb-10" placeholder="" ng-model="doorData.door_description"></textarea>
 											</div>
-										</div>
-										
+											<div class="row">
+												<div class="col-md-6 first">
+													<div class="form-group">
+														<label for="">Device Type</label><br/>
+														<div class="btn-group btnrounded">
+															<label class="btn btn-default" ng-model="doorData.door_status" uib-btn-radio="1">Active</label>
+															<label class="btn btn-default" ng-model="doorData.door_status" uib-btn-radio="0">Inactive</label>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="row">
+												<div class="form-group col-md-12 legend mt-20">
+													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
+													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
+												</div>
+											</div>
+										</form>
 									</div>
 
 								</div>
