--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -217,7 +217,7 @@
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.door.view-doors({door_id:door.door_id, type:'view'})">View</a>
 												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.door.view-doors({door_id:door.door_id, type:'edit'})">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
+												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event, door.door_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
