--- a/views/tmpl/admin/permissions/admin.html
+++ b/views/tmpl/admin/permissions/admin.html
@@ -8,7 +8,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="bg-dashboard">
-						<div class="bg-transparent">
+						<div class="bg-transparent rolesbg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -23,35 +23,43 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">15</p>
-									<span class="text-lg">Primary Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
-					<a ui-sref="app.admin.device.dependent-devices">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-mobile fa-5x"></i>
+				<div class="card">
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">7</p>
-									<span class="text-lg">Dependent Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
@@ -59,17 +67,21 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">95</p>
-									<span class="text-lg">Users</span>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -83,29 +95,30 @@
 						<ul class="controls">
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
-									<script type="text/ng-template" id="myModalContent.html">									
+									<script type="text/ng-template" id="myModalContent.html">									<form role="form" ng-validate="validationOptions" name="create_admin" ng-submit="createAdmin(admin, create_admin)">
 										<div class="modal-header"><h4 class="modal-title custom-font">Add Admin</h4></div>
-										<div class="modal-body">											
+										<div class="modal-body">
+											<span class="error">{{admin_error}}</span>											
 											<div class="row form-group">
 												<div class="col-md-6">
 													<label for="">First Name</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+													<input type="text" name="first_name" id="" class="form-control" placeholder="" ng-model="admin.first_name" required>
 												</div>
 												<div class="col-md-6">
 													<label for="">Last Name</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+													<input type="text" name="last_name" id="" class="form-control" placeholder="" ng-model="admin.last_name" required>
 												</div>
 											</div>
 											
 											<div class="form-group row">
 												<div class="col-md-6">													
 													<label for="">Email Address</label>
-													<input type="emial" name="" id="" class="form-control" placeholder="">
+													<input type="email" name="email" id="" class="form-control" placeholder="" ng-model="admin.email">
 												</div>
 												<div class="col-md-6">
 													<label for="">Profile Photo</label>
 													<div class="profilephoto">
-														<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+														<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-3" tabindex="-1">
 														<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 													</div>
 												</div>
@@ -113,23 +126,23 @@
 											
 											<div class="form-group row">
 												<div class="col-md-6">													
-													<label for="">Phone</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+													<label for="user_phone_no">Phone</label>
+													<input type="text" name="user_phone_no" id="" class="form-control" placeholder="" ng-model="admin.user_phone_no" required>
 												</div>
 												<div class="col-md-6">
-													<label for="">Password</label>
-													<input type="password" name="" id="" class="form-control" placeholder="">
+													<label for="password">Password</label>
+													<input type="password" name="password" id="" class="form-control" placeholder="" ng-model="admin.password" required>
 												</div>
 											</div>
 											
 											<div class="form-group row">
 												<div class="col-md-6">
-													<label for="">Address</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+													<label for="address">Address</label>
+													<input type="text" name="address" id="" class="form-control" placeholder="" ng-model="admin.address" required>
 												</div>
 												<div class="col-md-6">
-													<label for="">Zip Code</label>
-													<input type="text" name="" id="" class="form-control" placeholder="">
+													<label for="zip_code">Zip Code</label>
+													<input type="text" name="zip_code" id="" class="form-control" placeholder="" ng-model="admin.zip_code">
 												</div>
 											</div>
 											
@@ -147,7 +160,7 @@
 											<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
 											<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 										</div>
-										
+										</form>
 									</script>
 									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Admin</span></a>
 								</div>
@@ -158,7 +171,7 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
-								<div class="col-md-4 filterorder">
+								<div class="col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -170,11 +183,19 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
-									<button class="btn btn-default br-2-r" type="button">Search</button>
+								<div class="col-md-6">
+									<div class="row">
+										<div class="col-md-9 search">
+											<input type="text" class="form-control" placeholder="Search by text....">
+											<button class="btn btn-default br-2-r" type="button">Search</button>
+										</div>
+										<div class="col-md-3 profilephoto csvupload">
+											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										</div>
+									</div>
 								</div>
-								<div class="col-md-4">
+								<div class="col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
