--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -139,32 +139,10 @@
 									<tbody>
 										<tr ng-repeat="doorgroup in doorGroupList">
 											<td>{{ doorgroup.doorgroup_name }}</td>
-											<td>{{ doorgroup.doorgroup_door_count }}</td>
+											<td>{{ doorgroup.door_count }}</td>
 											<td width="220">							
-												<div ng-controller="ModalDemo1Ctrl" style="display: inline-block;">
-													<script type="text/ng-template" id="myModalContent1.html">
-														<form name="form1" role="form">
-															<div class="modal-header">
-																<h4 class="modal-title custom-font">Edit Door Groups</h4>
-															</div>
-															<div class="modal-body">	
-																<div class="form-group overflow">
-																	<label for="">Group Name </label>
-																	<input type="text" name="" id="" class="form-control mb-10" ng-model="doorgroup.doorgroup_name">
-																</div>
-																<div class="form-group">
-																	<label for="">Doors</label>
-																	<select class="form-control" Multiple chosen="{width: '100%'}" ng-model="doorgroup.door_id" ng-options="item.door_id as item.door_name for item in doorList"></select>
-																	<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.subadmin.door.doors">Add Door</a></small>
-																</div>
-															</div>
-															<div class="modal-footer">
-																<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
-																<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
-															</div>
-														</form>								
-													</script>	
-													<button type="button" ng-click="open()" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
+												<div ng-controller="ModalDoorGroupCtrl" style="display: inline-block;">
+													<button type="button" ng-click="open(doorgroup)" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
 												</div>
 												<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b" ng-click="showConfirm($event)"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
 											</td>
@@ -172,6 +150,29 @@
 									</tbody>
 								</table>
 							</div>
+							<script type="text/ng-template" id="myModalContent1.html">
+								<form name="form1" role="form" ng-submit="doorGroupSubmit(doorgroup)">
+									<div class="modal-header">
+										<h4 class="modal-title custom-font">Edit Door Groups</h4>
+									</div>
+									<div class="modal-body">	
+										<div class="form-group overflow">
+											<label for="">Group Name </label>
+											<input type="text" name="" id="" class="form-control mb-10" ng-model="doorgroup.doorgroup_name">
+										</div>
+										<div class="form-group">
+											<label for="">Doors</label>
+											<select class="form-control" Multiple chosen="{width: '100%'}" ng-model="doorgroup.door_id" ng-options="item.door_id as item.door_name for item in doorList">
+											</select>
+											<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.subadmin.door.doors">Add Door</a></small>
+										</div>
+									</div>
+									<div class="modal-footer">
+										<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+										<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+									</div>
+								</form>								
+							</script>
 						</div>
 					</div>
 				</section>
