--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -1,24 +1,23 @@
 <div class="page page-dashboard">
 	<div class="pagecontent">
 		<div class="row">		
-			<div class="card-container col-lg-6 col-sm-6 col-sm-12">
+			<div class="card-container col-sm-8 col-md-6">
 				<div class="card">
 					<div class="bg-dashboard dashboardbg">
 						<div class="bg-transparent">
 							<div class="row">
 								<div class="col-md-12">
-									<h3 class="custom-font h3link"><a ui-sref="app.admin.facility.facility-details">USA Corporate Services</a></h3>
-									<!--h3 class="custom-font h3link"><a ui-sref="app.admin.facility.facility">Facilities</a></h3-->
-									<p class="dashtext">{{page.subtitle}}</p>									
+									<h3 class="custom-font h3link hvr-pulse-grow"><a ui-sref="app.admin.facility.facility">Create A New Facilities</a></h3>
+									<!--h3 class="custom-font h3link"><a ui-sref="app.admin.facility.facility-details">USA Corporate Services</a></h3-->
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
-					<div class="front bg-blue">						
+					<div class="front bg-blue cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -27,26 +26,25 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device + dashboardData.dependent_device}}</p>
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
 									<span class="text-lg">Devices</span>
 								</div>
-
 							</div>
 						</div>
 					</div>
 					<div class="back bg-blue">
 						<div class="row">             
 							<div class="col-xs-6">
-									<a ui-sref="app.admin.device.devices"><img src="images/device-icon.png" alt=""><br/>Primary</a>
+								<a ui-sref="app.admin.device.devices"><img src="images/device-icon.png" alt=""><br/>15 Primary</a>
 							</div>
 							<div class="col-xs-6">
-									<a ui-sref="app.admin.device.dependent-devices"><img src="images/dependent-device-icon.png" alt=""><br/>Dependent</a>
+								<a ui-sref="app.admin.device.dependent-devices"><img src="images/dependent-device-icon.png" alt=""><br/>7 Dependent</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<div class="front bg-lightred">						
 						<div class="row">
@@ -57,10 +55,9 @@
 							</div>
 							<div class="col-xs-6">
 								<div class="itxt">								
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+									<p class="text-elg text-strong mt-5 mb-5">45</p>
 									<span class="text-lg">Users</span>
 								</div>	
-
 							</div>
 						</div>
 					</div>
@@ -76,7 +73,7 @@
 					</div>
 				</div>
 			</div>			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<div class="front bg-slategray lt">						
 						<div class="row">
@@ -87,7 +84,7 @@
 							</div>
 							<div class="col-xs-6">	
 							<div class="itxt">							
-								<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
+								<p class="text-elg text-strong mt-5 mb-5">22</p>
 								<span class="text-lg">Doors</span>
 							</div>	
 							</div>
@@ -96,19 +93,19 @@
 					<div class="back bg-slategray">
 						<div class="row">         
 							<div class="col-xs-6">
-									<a ui-sref="app.admin.door.doors"><img src="images/doors-icon.png" alt=""><br/>Doors</a>
+								<a ui-sref="app.admin.door.doors"><img src="images/doors-icon.png" alt=""><br/>Doors</a>
 							</div>
 							<div class="col-xs-6">
-									<a ui-sref="app.admin.door.door-groups"><img src="images/door-groups-icon.png" alt=""><br/>Door Groups</a>	
+								<a ui-sref="app.admin.door.door-groups"><img src="images/door-groups-icon.png" alt=""><br/>Door Groups</a>	
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="cameradvr card-container col-sm-4 col-md-3 mb-10">
 				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.camera.camera-dvr">
-						<div class="tile-widget bg-greensea text-center p-20">
+						<div class="above1800 tile-widget bg-greensea text-center p-20">
 							<img src="images/camera-icon.png" alt="">
 						</div>
 					</a>
@@ -123,26 +120,24 @@
 						</ul>
 					</div>
 				</section>
-			</div>			
-		</div>		
-		<div class="row">
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>	
+			<div class="adminroles card-container col-sm-4 col-md-3">
 				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.permissions.roles">
-						<div class="tile-widget bg-cyan text-center p-30 brt5">
+						<div class="above1800 tile-widget bg-cyan text-center p-30 brt5">
 							<img src="images/key-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
 					<div class="text-center overflow">
 						<ul class="list-inline tbox mt-10">
 							<li class="b-r tcol">
-								<a ui-sref="app.admin.permissions.roles">
+								<a ui-sref="app.admin.administrator.roles">
 									<h3>Roles</h3>
 									<span class="text-muted">Administration</span>
 								</a>
 							</li>
 							<li class="tcol">
-								<a ui-sref="app.admin.permissions.admin">
+								<a ui-sref="app.admin.administrator.admin">
 									<h3>Admin</h3>
 									<span class="text-muted">Administration</span>
 								</a>
@@ -151,10 +146,10 @@
 					</div>
 				</section>
 			</div>			
-			<div class="card-container col-lg-4 col-sm-6 col-sm-12">
+			<div class="holidayschedule card-container col-sm-5 col-md-4">
 				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.schedule.schedule-groups">
-						<div class="tile-widget bg-drank text-center p-30 brt5">
+						<div class="above1800 tile-widget bg-drank text-center p-30 brt5">
 							<img src="images/schedule-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
@@ -176,10 +171,10 @@
 					</div>
 				</section>
 			</div>			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="historyreports card-container col-sm-4 col-md-3">
 				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.help.history-and-reports">
-						<div class="tile-widget bg-lightred text-center p-30 brt5">
+						<div class="above1800 tile-widget bg-lightred text-center p-30 brt5">
 							<img src="images/history-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
@@ -195,10 +190,10 @@
 					</div>
 				</section>
 			</div>			
-			<div class="card-container col-lg-2 col-sm-6 col-sm-12">
+			<div class="technicians card-container col-sm-3 col-md-2">
 				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.support.technician">
-						<div class="tile-widget bg-dutch text-center p-30 brt5">
+						<div class="above1800 tile-widget bg-dutch text-center p-30 brt5">
 							<img src="images/technician-icon.png" class="imgsmall" alt="">
 						</div>
 					</a>
