--- a/views/tmpl/admin/permissions/roles.html
+++ b/views/tmpl/admin/permissions/roles.html
@@ -8,7 +8,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="bg-dashboard">
-						<div class="bg-transparent">
+						<div class="bg-transparent rolesbg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -23,35 +23,43 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">15</p>
-									<span class="text-lg">Primary Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
-					<a ui-sref="app.admin.device.dependent-devices">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-mobile fa-5x"></i>
+				<div class="card">
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">7</p>
-									<span class="text-lg">Dependent Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">35</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
@@ -59,17 +67,21 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">95</p>
-									<span class="text-lg">Users</span>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -99,30 +111,40 @@
 													<textarea name="" id="" class="form-control mb-10" placeholder=""></textarea>
 												</div>
 												
-												<div class="row" ng-controller="AccessbtnCtrl">
+												<div class="row" ng-controller="ActivebtnCtrl">
 													<div class="form-group col-md-5">
 														<label for="">Status</label><br/>
-														<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
+														<div class="btn-group btnrounded">
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
 														</div>
 													</div>
-													<div class="form-group col-md-7">
-														<label for="">Access</label><br/>
-														<div class="btn-group btnrounded">
-															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Full'">Full Access</label>
-															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Restricted'">Restricted Access</label>
+													<div ng-hide="radioModel=='Inactive'">
+														<div ng-controller="AccessbtnCtrl">
+															<div class="form-group col-md-7" >
+																<label for="">Access</label><br/>
+																<div class="btn-group btnrounded">
+																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Full'">Full Access</label>
+																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Restricted'">Restricted Access</label>
+																</div>
+															</div>
+															<div class="form-group col-md-12" ng-hide="radioModel=='Full'">
+																<select Multiple chosen="{width: '100%'}">
+																	<option value="users">Facility Add</option>
+																	<option value="users">Facility Edit</option>
+																	<option value="users">Facility Delete</option>
+																	<option value="users">Users Add</option>
+																	<option value="users">Users Edit</option>
+																	<option value="users">Users Delete</option>
+																	<option value="tenants">Tenants</option>
+																	<option value="users">Device Add</option>
+																	<option value="users">Device Edit</option>
+																	<option value="users">Device Delete</option>
+																</select>
+															</div>
 														</div>
 													</div>
-													<div class="form-group col-md-12" ng-hide="radioModel=='Full'">
-														<select Multiple chosen="{width: '100%'}">
-															<option value="users">Users</option>
-															<option value="tenants">Tenants</option>
-															<option value="devices">Devices</option>
-														</select>
-													</div>
-												</div>
-																													
+												</div>															
 											</div>
 											<div class="modal-footer">
 												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
@@ -139,7 +161,7 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
-								<div class="col-md-4 filterorder">
+								<div class="col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -151,11 +173,19 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
-									<button class="btn btn-default br-2-r" type="button">Search</button>
+								<div class="col-md-6">
+									<div class="row">
+										<div class="col-md-9 search">
+											<input type="text" class="form-control" placeholder="Search by text....">
+											<button class="btn btn-default br-2-r" type="button">Search</button>
+										</div>
+										<div class="col-md-3 profilephoto csvupload">
+											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										</div>
+									</div>
 								</div>
-								<div class="col-md-4">
+								<div class="col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
