--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -1,7 +1,7 @@
-<div class="page page-users">
+<div class="page page-profile">
 	<div class="pageheader backpage">		
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
-	</div>	
+	</div>
 	
 	<div class="pagecontent">
 		<div class="row">		
@@ -11,7 +11,7 @@
 						<div class="bg-transparent usersbg">
 							<div class="row">
 								<div class="col-md-12">
-									<h3 class="custom-font">{{page.title}}</h3>
+									<h3 class="custom-font">{{page.member}}</h3>
 									<p>{{page.subtitle}}</p>									
 								</div>
 							</div>
@@ -73,7 +73,7 @@
 							</div>
 							<div class="col-xs-6">
 								<div class="itxt">								
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}	</p>
 									<span class="text-lg">Users</span>
 								</div>	
 							</div>
@@ -84,20 +84,37 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="UserCtrl">
-			<div class="col-md-12">	   
-				<section class="tile box-shadow">
-					<div class="tile-header dvd dvd-btm">
-						<h1 class="custom-font">{{page.title}}</h1>
-						<div class="addusers">
-							<a class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add" ui-sref="app.admin.user.add-user"><i class="fa fa-plus"></i> <span>Add User</span></a>
+		<div ng-if="result">									
+			<div layout="row" ng-class="statusclass">									
+				{{result}}
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-12 col-md-4">
+				<section class="tile tile-simple">
+					<div class="leftdetail tile-widget p-30 text-center">
+						<div class="thumb thumb-xxll mb-20">
+							<img class="img-circle" src="images/usergroups/officehrs.jpg" alt="">
 						</div>
-					</div>
-					
-					<div class="hometabs">
-						<div class="tile-body table-custom">
+						<h3 class="mb-10"><strong>Office Hours</strong></h3>
+						<span class="text-muted">35 Users</span>
+						<div class="mt-40">
+							<a ng-click="showConfirm($event)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete User Group</a>
+						</div>
+					</div>  
+				</section>
+			</div>
+			
+			<div class="col-sm-12 col-md-8" ng-controller="UserGroupsCtrl"> 
+				<section class="tile tile-simple"> 
+					<div class="tile-body p-0"> 
+						<div class="tile-header dvd dvd-btm">
+							<h1 class="custom-font">{{page.member}}</h1>
+						</div>
+						<div class="wrap-reset m-0 pt-20"> 
 							<div class="row pos-r mb-40">
-								<div class="col-sm-3 col-md-3 filterorder">
+								<div class="col-sm-4 col-md-4 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -106,41 +123,14 @@
 										<ul class="dropdown-menu with-arrow animated littleFadeInUp">
 											<li><a href="" ng-click="orderByMe('name')">Name</a></li>
 											<li><a href="" ng-click="orderByMe('group')">Group</a></li>
-											<li><a href="" ng-click="orderByMe('facility')">Facility</a></li>
-											<li><a href="" ng-click="orderByMe('phone')">Phone</a></li>
 										</ul>
 									</label>
 								</div>
-								<div class="col-sm-6 col-md-6">
-									<div class="row">
-										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" placeholder="Search by text...." ng-keyup="searchFunction($event)" ng-model="searchText" >
-											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
-										</div>
-										<div class="col-sm-4 col-md-3 profilephoto csvupload">
-											<div ng-controller="ModalDemoCtrl">
-												<script type="text/ng-template" id="myModalContent.html">
-													<form name="form1" role="form">
-														<div class="modal-header"><h4 class="modal-title custom-font">Upload CSV File</h4></div>
-														<div class="modal-body mt-5 pb-30 mb-40">
-															<label for="">Upload CSV file</label>
-															<div class="profilephoto">
-																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
-															</div>											
-														</div>
-														<div class="modal-footer">
-															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
-															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>	
-														</div>
-													</form>		
-												</script>
-												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
-											</div>
-										</div>
-									</div>
+								<div class="col-sm-4 col-md-4 search">
+									<input type="text" class="form-control" placeholder="Search by text....">
+									<button class="btn btn-default br-2-r" type="button">Search</button>
 								</div>
-								<div class="col-sm-3 col-md-3">
+								<div class="col-sm-4 col-md-4">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -148,50 +138,40 @@
 									</div>
 								</div>
 								<div class="filterfields" ng-hide="filtershow">
-									<div class="col-sm-3 col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
 									</div>
-									<div class="col-sm-3 col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fbtitle" class="control-label">Search by name</label>
 										<input type="text" class="form-control" id="fbtitle" ng-model="name">
 									</div>
-									<div class="col-sm-3 col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fblocation" class="control-label">Search by group</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="group">
 									</div>
-									<div class="col-sm-3 col-md-3">
-										<label for="fblocation" class="control-label">Search by phone</label>
-										<input type="text" class="form-control" id="fblocation" ng-model="phone">
-									</div>
-								</div>
-							</div>
-							<div ng-if="result">									
-								<div layout="row" ng-class="statusclass">									
-									{{result}}
 								</div>
 							</div>
 							<div ng-class="class">
 								<div class="glview">
-									<md-content>	{{users}}		
-										<md-card ng-repeat="user in users | limitTo:totalDisplayed | filter:text | filter:name | filter:group | filter:phone | orderBy:myOrderBy">
-											<a ui-sref="app.admin.user.user-profile"><img ng-src="{{imagePath}}/users/{{user.imagename}}.jpg" class="md-card-image" alt="Washed Out"></a>
+									<md-content>
+										<md-card class="slaveusers" ng-repeat="user in users | limitTo:totalDisplayed | filter:text | filter:title | filter:group | orderBy:myOrderBy"">
+											<a ui-sref="app.admin.user.user-profile"><img ng-src="{{imagePath}}/users/{{ user.imagename }}.jpg" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
-												<h2 class="md-title">{{ user.user_first_name }} {{ user.user_last_name }}</h2>
-												<p>{{ user.user_phone_no }}</p>
+												<h2 class="md-title">{{ user.name }}</h2>
+												<p>{{ user.phone }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.user.view-user">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.user.edit-user">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
+												<a class="btn btn-danger btn-border btn-rounded" ui-sref="app.admin.user.user-groups">Remove</a>
 											</div>
-										</md-card>										
+										</md-card>
 									</md-content>
 									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
-					</div>					
+					</div>
 				</section>
 			</div>
 		</div>
