--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -5,10 +5,10 @@
 	
 	<div class="pagecontent">	
 		<div class="row">		
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
-					<div class="bg-dashboard pdevicebg">
-						<div class="bg-transparent">
+					<div class="bg-dashboard">
+						<div class="bg-transparent pdevicebg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -19,69 +19,66 @@
 					</div>
 				</div>
 			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-6 ta-r">
-									<div class="iconbx">
-										<img src="images/device-icon.png" alt="">
-									</div>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-6">	
-									<div class="itxt">							
-										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
-										<span class="text-lg">Devices</span>
-									</div>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
+				<div class="card">
 					<a ui-sref="app.admin.door.doors">
-						<div class="noback bg-slategray lt">
-							<div class="row">
-								<div class="col-xs-6 ta-r">
-									<div class="iconbx">
-										<img src="images/doors-icon.png" alt="">
-									</div>
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-6">
-									<div class="itxt">
-										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
-										<span class="text-lg">Doors</span>
-									</div>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-6 ta-r">
-									<div class="iconbx">
-										<img src="images/users-icon.png" alt="">
-									</div>
-								</div>
-								<div class="col-xs-6">
-									<div class="itxt">								
-										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
-										<span class="text-lg">Users</span>
-									</div>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -89,123 +86,145 @@
 		
 		<div class="row" ng-controller="DeviceCtrl">
 			<div class="col-md-12">
-				<section class="tile box-shadow" fullscreen="isFullscreen06">
+				<section class="tile box-shadow">
 					<div class="tile-header dvd dvd-btm">
-						<h1 class="custom-font"><strong>{{page.title}}</strong></h1>
+						<h1 class="custom-font">{{page.title}}</h1>
 						<ul class="controls">
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form role="form" ng-validate="validationOptions" id="device_form" name="device_form">
+										<form name="device_form" ng-validate="validationOptions" id="device_form" role="form">
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Configuration Device</h4></div>
-											<div class="modal-body">
-												<div class="row overflow">
-													<div class="col-md-12">
+											<div class="modal-body mt-5">
+												<div class="row">
+													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Name</label>
-														<input type="text" name="device_name" ng-model="device.device_name" id="" class="form-control mb-10" placeholder="" required>
+														<input type="text" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required>
 													</div>
-													<!-- <div class="col-md-6">
+													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Model Name</label>
 														<input type="text" name="" id="" class="form-control" placeholder="">
-													</div> -->
-													
-													<!--<div class="col-md-6 last">
-														<div class="form-group">
-															<label for="">Model Name</label>
-															<input type="text" name="" id="" ng-model="device.model_name" class="form-control mb-10" placeholder="">
-														</div>
-													</div>-->
+													</div>
 												</div>
 												<div class="row">
-													<div class="col-md-6">
+													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number</label>
-														<input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required>
+														<input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
+														<!-- <input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required> -->
 													</div>
-													<div class="col-md-6">
+													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
-														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required>
+														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
+														<!-- <input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required> -->
 													</div>
-													
 												</div>
-												
-												
-												<div class="form-group">
-													<label for="">Device Type </label><br/>
-													<div class="btn-group btnrounded" ng-init="device.device_type='master'">
-														<label class="btn btn-default" ng-model="device.device_type" uib-btn-radio="'master'">Primary</label>
-														<label class="btn btn-default" ng-model="device.device_type" uib-btn-radio="'slave'">Dependent</label>
+												<div class="row" >
+													<div class="form-group col-sm-6 col-md-6">
+														<label for="">Device Type</label><br/>
+														<div class="btn-group btnrounded" ng-init="device.device_type='master'">
+															<label class="btn btn-default" ng-model="device.device_type" uib-btn-radio="'master'">Primary</label>
+															<label class="btn btn-default" ng-model="device.device_type" uib-btn-radio="'slave'">Dependent</label>
+														</div>
 													</div>
-													<div class="slavevalues" ng-hide="device.device_type=='master'">
-														<select class="form-control mb-10" ng-model="device.device_master_id" ng-options="item.device_id as item.device_name for item in deviceList">
+													<div class="form-group col-sm-6 col-md-6">
+														<label for="">&nbsp;</label>
+														<select class="form-control" ng-hide="device.device_type=='master'" ng-model="device.device_master_id" ng-options="item.device_id as item.device_name for item in deviceList">
 															<option>Select Primary Device</option>
-															<!-- <option value=2>Reception Room</option>
-															<option value=3>Conference Room</option>
-															<option value=4>Server Room</option>
-															<option value=5>Meeting Room</option>
-															<option value=6>Development Room</option>
-															<option value=7>Boardroom</option>
-															<option value=8>Managers Room</option>
-															<option value=9>Director Room</option>
-															<option value=10>Inventory Room</option> -->
 														</select>
 													</div>
 												</div>
+												
 												<div class="row">
-													<div class="col-md-6">
+													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Facility</label><br/>
 														<input type="text" class="form-control" value="{{FacilityName}}" disabled/>
 													</div>
-													<div class="col-md-6">
-														
+													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Technician</label><br/>
-														
 														<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"  ng-model="device.technician_id" required>
 															<option value="">Select</option>
 														</select>
-														<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.subadmin.support.technician">Add Technician</a></small>
-														
-													</div>
-												</div>
-												<div class="row">
-													<div class="col-md-12">
-														<label for="">Doors</label><br/><!--doorList-->
-														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
-														</select>
+														<small class="pull-right"><a ng-click="cancel()" ui-sref="app.subadmin.support.technician">Add Technician</a></small>
 													</div>
 												</div>
 											</div>
 											<div class="modal-footer">
 												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
-												<button  ng-click="formSubmit(device,device_form)" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+												<button ng-click="formSubmit(device,device_form)" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
 									</script>
 									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Devices</span></a>
-								</div>
+								</div>								
+							</li>
+							<li class="addpopup">
+								<div ng-controller="ModalDemo1Ctrl">
+									<script type="text/ng-template" id="myModalContent1.html">
+										<form name="form1" role="form">
+											<div class="modal-header"><h4 class="modal-title custom-font">Add Device Plan</h4></div>
+											<div class="modal-body mt-5">
+												<div class="overflow mt-40 pt-40 mb-40 pb-40 ta-c">
+													<h3>work in progress</h3>
+												</div>
+											</div>
+											<div class="modal-footer">
+												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+											</div>
+										</form>		
+									</script>
+									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Devices plan</span></a>
+								</div>								
 							</li>
 						</ul>
 					</div>
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r mb-20">
-								<div class="col-md-4 filterorder">
+							<div class="row pos-r mb-40">
+								<div class="col-sm-3 col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
 									<label class="control-label" uib-dropdown on-toggle="toggled(open)">
 										<a href uib-dropdown-toggle style="border-right: 0 none; ">Order by</a>
 										<ul class="dropdown-menu with-arrow animated littleFadeInUp">
-											<li><a href="" ng-click="orderByMe('device_name')">Name</a></li>
-											<li><a href="" ng-click="orderByMe('device_model')">Model</a></li>
+											<li><a href="" ng-click="orderByMe('title')">Title</a></li>
+											<li><a href="" ng-click="orderByMe('facility')">Facility</a></li>
+											<li><a href="" ng-click="orderByMe('model')">Model</a></li>
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-4 search">
-									<input type="text" class="form-control" ng-model="searchText" placeholder="Search by text...." ng-keyup="searchFunction($event)">
-									<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
+								<div class="col-sm-6 col-md-6">
+									<div class="row">
+										<div class="col-sm-8 col-md-9 search">
+											<input type="text" class="form-control" ng-model="searchText" placeholder="Search by text...." ng-keyup="searchFunction($event)">
+											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
+										</div>
+										<div class="col-sm-4 col-md-3 profilephoto csvupload">
+											<div ng-controller="ModalDemo2Ctrl">
+												<script type="text/ng-template" id="myModalContent2.html">
+													<form name="form1" role="form">
+														<div class="modal-header"><h4 class="modal-title custom-font">Upload CSV File</h4></div>
+														<div class="modal-body mt-5 pb-30 mb-40">
+															<label for="">Upload CSV file</label>
+															<div class="profilephoto">
+																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+															</div>											
+														</div>
+														<div class="modal-footer">
+															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
+															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>	
+														</div>
+													</form>		
+												</script>
+												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+											</div>
+										</div>
+									</div>
 								</div>
-								<div class="col-md-4">
+								<div class="col-sm-3 col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -213,13 +232,17 @@
 									</div>
 								</div>
 								<div class="filterfields" ng-hide="filtershow">
-									<div class="col-md-3">
-										<label for="fbtext" class="control-label">Search by Name</label> 
-										<input type="text" class="form-control" id="fbtext" ng-model="text" >
+									<div class="col-sm-4 col-md-3">
+										<label for="fbtext" class="control-label">Search by text</label> 
+										<input type="text" class="form-control" id="fbtext" ng-model="text">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-4 col-md-3">
 										<label for="fbtitle" class="control-label">Search by title</label>
 										<input type="text" class="form-control" id="fbtitle" ng-model="title">
+									</div>
+									<div class="col-sm-4 col-md-3">
+										<label for="fblocation" class="control-label">Search by facility</label>
+										<input type="text" class="form-control" id="fblocation" ng-model="facility">
 									</div>
 								</div>
 							</div>
@@ -233,7 +256,7 @@
 									<md-content>			
 										<md-card ng-repeat="device in data | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
 											<span class="moreitemsondevice">
-												<a ui-sref="app.admin.service-plan"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+												<a ui-sref="app.admin.device.service-plan"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
 												<a ui-sref="app.admin.settings({device_id:device.device_id})"><i class="fa fa-cog" aria-hidden="true"></i></a>
 											</span>
 											<a ui-sref="app.admin.device.device-details({device_id:device.device_id})"><img ng-src="images/device/1.jpg" class="md-card-image" alt="Washed Out"></a>
@@ -243,20 +266,19 @@
 												<p>Dependent {{ device.device_slave_count }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.device-details({device_id:device.device_id})">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.device-details({device_id:device.device_id})">Edit</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.view-device({device_id:device.device_id})">View</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.edit-device({device_id:device.device_id})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm(device.device_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" id="loadMoreBtn" ng-click="deviceInit()" ng-style="lmbtn">Load more</button>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
 					</div>
 				</section>
 			</div>
-		</div>	
-		
+		</div>
 	</div>
 </div>
