--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -1,38 +1,53 @@
-<div class="page page-core page-login">
-	<div class="text-center logo-login"></div>
-	<div class="container w-360 p-15 bg-white mt-20 text-center login-box-shadow">
-
-		<h2 class="login-h2 text-greensea">Create a new account</h2>
-
-		<form name="form" class="form-validation mt-20" novalidate>
-			<div class="form-group">
-				<input type="text" class="form-control underline-input" placeholder="Full Name" ng-model="user.name" required>
-			</div>
-
-			<div class="form-group">
-				<input type="email" class="form-control underline-input" placeholder="Email" ng-model="user.email" required>
-			</div>
-
-			<div class="form-group">
-				<input type="password" placeholder="Password" class="form-control underline-input" ng-model="user.password" required>
-			</div>
-	  
-			<div class="form-group">
-				<input type="password" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirmpassword" required>
-			</div>
-
-			<div class="form-group text-left">
-				<label class="checkbox checkbox-custom checkbox-custom-sm inline-block">
-					<input type="checkbox" ng-model="user.accept" required><i></i> I agree to the <a href="javascript:;">Terms of Service</a> & <a href="javascript:;">Privacy Policy</a>
-				</label>
-			</div>
-	  
-			<button type="submit" class="btn btn-greensea b-0 br-2" ng-click="login()" ng-disabled='form.$invalid'>Submit</button> 
-		</form>
-		
-		<div class="bg-slategray lt wrap-reset mt-20">
-			<p class="m-0"><a ui-sref="core.login">Back to login</a></p>
+<section id="loginwrap">
+	<div class="leftwrap">
+		<div class="newlogo">
+			<img src="images/logo.png">
 		</div>
-		
+		<div class="welcometxt">
+			<h1>Welcome <span>Back!</span></h1>
+		</div>
 	</div>
-</div>
+	<div class="page page-core page-login core-new">
+		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
+			<h2 class="login-h2 text-greensea">Create a new account</h2>
+			<form name="form" class="form-validation mt-20" novalidate ng-controller="LoginCtrl">
+				<div class="form-group">
+					<input type="text" class="form-control underline-input" placeholder="Full Name" ng-model="user.name" required>
+				</div>
+
+				<div class="form-group">
+					<input type="email" class="form-control underline-input" placeholder="Email" ng-model="user.email" required>
+				</div>
+
+				<div class="form-group">
+					<input type="password" placeholder="Password" class="form-control underline-input" ng-model="user.password" required>
+				</div>
+		  
+				<div class="form-group">
+					<input type="password" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirmpassword" required>
+				</div>
+				
+				<div class="form-group text-left" style="margin-top: -25px;">        
+					<label class="checkbox checkbox-custom-alt inline-block" style="font-weight: 400; font-size: 16px;">
+						<input type="checkbox"><i></i> I agree to the <a href="javascript:;">Terms of Service</a> & <a href="javascript:;">Privacy Policy</a>
+					</label>
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>Submit</button>
+				</div>
+			</form>
+			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
+				<p class="m-0"><a ui-sref="core.login">Back to login</a></p>
+			</div>
+		</div>
+	</div>	
+</section>
+<script type="text/javascript">
+	$(document).ready(function() {
+	    var popuph = document.getElementById('hpopup').offsetHeight;
+		$('.w-450').css({
+	        'position' : 'absolute',
+	        'left' : '47.5%',
+	        'top' : '50%',	        
+			'margin-top' : -popuph/2,
+	    });
+	});
+</script>
